updated the html

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Tamar's Tic Tac Toe</title>
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <div id="gameContainer">
-      <h1>Tik Tac Toe</h1>
+      <h1>Tic Tac Toe</h1>
       <div id="cellContainer">
         <div cellIndex="0" class="cell"></div>
         <div cellIndex="1" class="cell"></div>
@@ -25,5 +25,6 @@
     </div>
 
     <script src="src/script.js"></script>
+    
   </body>
 </html>
